@@ -1,8 +1,8 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/texmfind/texmfind-2008.1.ebuild,v 1.4 2009/09/20 15:50:31 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/texmfind/texmfind-2008.1.ebuild,v 1.5 2010/11/14 23:53:35 fauli Exp $
 
-DESCRIPTION="Finds which ebuild provide a texmf file matching a grep regexp."
+DESCRIPTION="Locate the ebuild providing a certain texmf file through regexp"
 HOMEPAGE="https://launchpad.net/texmfind/
 	http://home.gna.org/texmfind"
 SRC_URI="http://launchpad.net/texmfind/2008/${PV}/+download/texmfind-${PV}.tar.bz2"
